# sdkwork-drive

./: .env.postgres.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.minio-test.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
crates/sdkwork-api-drive-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-drive-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-drive-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-drive-database-host/: Cargo.toml
crates/sdkwork-drive-database-host/specs/: README.md  component.spec.json
crates/sdkwork-drive-database-host/src/: bootstrap.rs  lib.rs
crates/sdkwork-drive-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-drive-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-drive-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-drive-http/: Cargo.toml  README.md
crates/sdkwork-drive-http/specs/: README.md  component.spec.json
crates/sdkwork-drive-http/src/: api_problem.rs  context.rs  infra.rs  lib.rs  metrics.rs  problem_correlation.rs  problem_detail.rs  response.rs  server.rs  trace_ids.rs  web_app_context.rs  web_framework.rs
crates/sdkwork-drive-install-worker/: Cargo.toml  README.md
crates/sdkwork-drive-install-worker/specs/: README.md  component.spec.json
crates/sdkwork-drive-install-worker/src/: health.rs  lib.rs  main.rs  scheduler.rs
crates/sdkwork-drive-install-worker/tests/: website_publishing_cleanup.rs
crates/sdkwork-drive-object-runtime/: Cargo.toml
crates/sdkwork-drive-object-runtime/specs/: README.md  component.spec.json
crates/sdkwork-drive-object-runtime/src/: lib.rs
crates/sdkwork-drive-observability/: Cargo.toml  README.md
crates/sdkwork-drive-observability/specs/: README.md  component.spec.json
crates/sdkwork-drive-observability/src/: latency_histogram.rs  lib.rs  metrics.rs  tracing_setup.rs
crates/sdkwork-drive-sandbox-local/: Cargo.toml  README.md
crates/sdkwork-drive-sandbox-local/specs/: README.md  component.spec.json
crates/sdkwork-drive-sandbox-local/src/: directory_provider.rs  lib.rs  path_resolver.rs
crates/sdkwork-drive-sandbox-local/tests/: sandbox_file_system_service.rs
crates/sdkwork-drive-security/: Cargo.toml  README.md
crates/sdkwork-drive-security/specs/: README.md  component.spec.json
crates/sdkwork-drive-security/src/: context.rs  jwks.rs  jwt.rs  lib.rs  permission.rs  policy.rs  policy_handle.rs  token_claims.rs  webhook_url.rs
crates/sdkwork-drive-standalone-gateway/: Cargo.toml
crates/sdkwork-drive-standalone-gateway/specs/: README.md  component.spec.json
crates/sdkwork-drive-standalone-gateway/src/: config.rs  iam_application_bootstrap.rs  main.rs
crates/sdkwork-drive-storage-local/: Cargo.toml  README.md
crates/sdkwork-drive-storage-local/specs/: README.md  component.spec.json
crates/sdkwork-drive-storage-local/src/: lib.rs  local_store.rs
crates/sdkwork-drive-storage-local/tests/: local_store.rs
crates/sdkwork-drive-storage-opendal/: Cargo.toml  README.md
crates/sdkwork-drive-storage-opendal/specs/: README.md  component.spec.json
crates/sdkwork-drive-storage-opendal/src/: config.rs  lib.rs  opendal_store.rs
crates/sdkwork-drive-storage-opendal/tests/: opendal_contract.rs
crates/sdkwork-drive-storage-s3/: Cargo.toml  README.md
crates/sdkwork-drive-storage-s3/specs/: README.md  component.spec.json
crates/sdkwork-drive-storage-s3/src/: config.rs  lib.rs  s3_store.rs
crates/sdkwork-drive-storage-s3/tests/: s3_contract.rs
crates/sdkwork-drive-workspace-service/: Cargo.toml  README.md
crates/sdkwork-drive-workspace-service/specs/: README.md  component.spec.json
crates/sdkwork-drive-workspace-service/src/: bootstrap.rs  lib.rs  main.rs
crates/sdkwork-drive-workspace-service/tests/: audit_query_plan.rs  audit_service.rs  content_scan.rs  domain_space_rules.rs  download_service.rs  maintenance_service.rs  node_service.rs  node_version_store.rs  outbox_dispatch.rs  permission_access.rs  postgres_schema_contract.rs  postgres_website_sync_concurrency.rs  quota_enforcement.rs  quota_service.rs  resource_resolution.rs  root_scope_subscription.rs  runtime_id_standard.rs  sandbox_admin_service.rs  sandbox_directory_service.rs  sandbox_schema_contract.rs  sandbox_service.rs  space_lifecycle_and_change_feed.rs  space_service.rs  sqlite_schema_contract.rs  storage_key_service.rs  storage_provider_service.rs  upload_service.rs  uploader_service.rs  website_space.rs  website_sync.rs  workspace_service.rs
crates/sdkwork-router-drive-app-api/: Cargo.toml  README.md
crates/sdkwork-router-drive-app-api/specs/: README.md  component.spec.json
crates/sdkwork-router-drive-app-api/src/: acl.rs  app_context.rs  archive_storage.rs  asset_handlers.rs  assets.rs  auth.rs  change_handlers.rs  collaboration_repository.rs  comment_handlers.rs  constants.rs  download_packages.rs  dto.rs  error.rs  handlers.rs  hashing.rs  health_handlers.rs  http_route_manifest.rs  ids.rs  lib.rs  main.rs  mappers.rs  metadata_repository.rs  node_repository.rs  rate_limit.rs  routes.rs  search_handlers.rs  space_handlers.rs  space_repository.rs  state.rs  upload_handlers.rs  uploader.rs  validators.rs  watch_handlers.rs  watch_repository.rs  (+2 more)
crates/sdkwork-router-drive-backend-api/: Cargo.toml  README.md
crates/sdkwork-router-drive-open-api/: Cargo.toml  README.md
crates/sdkwork-router-storage-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-drive-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-drive-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-drive-internal-api/: Cargo.toml  README.md
crates/sdkwork-routes-drive-open-api/: Cargo.toml  README.md
services/sdkwork-drive-admin-api/: Cargo.toml
services/sdkwork-drive-admin-storage-api/: Cargo.toml  README.md
services/sdkwork-drive-app-api/: Cargo.toml  README.md
services/sdkwork-drive-open-api/: Cargo.toml  README.md
services/sdkwork-drive-product/: Cargo.toml  README.md
(+1067 files in other folders)
