[workspace]
members = [
    "crates/sdkwork-drive-contract",
    "crates/sdkwork-drive-config",
    "crates/sdkwork-drive-http",
    "crates/sdkwork-drive-security",
    "crates/sdkwork-drive-observability",
    "crates/sdkwork-drive-storage-contract",
    "crates/sdkwork-drive-storage-local",
    "crates/sdkwork-drive-storage-opendal",
    "crates/sdkwork-drive-storage-s3",
    "crates/sdkwork-drive-test-support",
    "crates/sdkwork-drive-workspace-service",
    "crates/sdkwork-router-drive-open-api",
    "crates/sdkwork-router-drive-app-api",
    "crates/sdkwork-router-storage-backend-api",
    "crates/sdkwork-router-drive-backend-api",
    "crates/sdkwork-drive-install-worker",
    "crates/sdkwork-drive-standalone-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
hmac = "0.12"
http = "1.4"
opendal = { version = "0.57.0", default-features = false, features = ["services-s3", "reqwest-rustls-tls", "executors-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite", "postgres", "chrono"] }
tempfile = "3.12"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

# AWS SDK dependencies
aws-config = "1.8"
aws-credential-types = "1.2"
aws-sdk-s3 = "1.79"
aws-types = "1.3"

# SDKWork workspace members - declared once at workspace root
sdkwork-drive-contract = { path = "crates/sdkwork-drive-contract" }
sdkwork-drive-config = { path = "crates/sdkwork-drive-config" }
sdkwork-drive-http = { path = "crates/sdkwork-drive-http" }
sdkwork-drive-observability = { path = "crates/sdkwork-drive-observability" }
sdkwork-drive-security = { path = "crates/sdkwork-drive-security" }
sdkwork-drive-storage-contract = { path = "crates/sdkwork-drive-storage-contract" }
sdkwork-drive-storage-local = { path = "crates/sdkwork-drive-storage-local" }
sdkwork-drive-storage-opendal = { path = "crates/sdkwork-drive-storage-opendal" }
sdkwork-drive-storage-s3 = { path = "crates/sdkwork-drive-storage-s3" }
sdkwork-drive-workspace-service = { path = "crates/sdkwork-drive-workspace-service" }

# SDKWork database dependencies
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-repository = { path = "../sdkwork-database/crates/sdkwork-database-repository" }
sdkwork-id-core = { path = "../sdkwork-id/crates/sdkwork-id-core" }
