[package]
name = "sdkwork-api-drive-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-drive application HTTP plane."

[lib]
name = "sdkwork_api_drive_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-routes-drive-app-api.workspace = true
sdkwork-routes-drive-backend-api.workspace = true
sdkwork-routes-drive-open-api.workspace = true
sdkwork-routes-storage-backend-api.workspace = true
