[package]
name = "sdkwork-drive-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-drive application HTTP plane."

[lib]
name = "sdkwork_drive_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sqlx.workspace = true
sdkwork-drive-http.workspace = true
sdkwork-routes-drive-app-api.workspace = true
sdkwork-routes-drive-backend-api.workspace = true
sdkwork-routes-drive-open-api.workspace = true
