[package]
name = "sdkwork-drive-http"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
sdkwork-drive-config.workspace = true
sdkwork-drive-observability.workspace = true
sdkwork-drive-security.workspace = true
sdkwork-web-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio.workspace = true
