[package]
name = "sdkwork-drive-http"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
sdkwork-drive-config.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-drive-observability.workspace = true
sdkwork-drive-security.workspace = true
sdkwork-web-bootstrap = { workspace = true, features = ["sqlx"] }
sdkwork-web-core.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
redis = { version = "0.28", default-features = false, features = ["tokio-comp", "connection-manager", "script"], optional = true }

[dev-dependencies]
tower.workspace = true

[features]
default = ["memory-rate-limit"]
memory-rate-limit = []
redis-rate-limit = ["redis"]
