[package]
name = "sdkwork-drive-install-worker"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4"
sdkwork-drive-config.workspace = true
sdkwork-drive-observability = { workspace = true, features = ["otlp"] }
sdkwork-drive-workspace-service.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
