[package]
name = "sdkwork-drive-install-worker"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono = "0.4"
sdkwork-drive-config.workspace = true
sdkwork-drive-http.workspace = true
sdkwork-drive-observability = { workspace = true, features = ["otlp"] }
sdkwork-drive-workspace-service.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing.workspace = true
