[package]
name = "sdkwork-drive-security"
version.workspace = true
edition.workspace = true

[dependencies]
sdkwork-utils-rust.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time", "rt", "net"] }
tracing.workspace = true
