[package]
name = "sdkwork-drive-standalone-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sdkwork-drive-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
http.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal"] }
toml = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
sdkwork-drive-config.workspace = true
sdkwork-drive-http.workspace = true
sdkwork-drive-observability = { workspace = true, features = ["otlp"] }
sqlx.workspace = true
sdkwork-drive-security.workspace = true
sdkwork-drive-workspace-service.workspace = true
sdkwork-drive-gateway-assembly.workspace = true
sdkwork-routes-storage-backend-api.workspace = true
sdkwork_routes_iam_app_api = { workspace = true }
sdkwork-iam-embedded-application-bootstrap = { workspace = true }
sdkwork-iam-database-host = { workspace = true }
