[package]
name = "sdkwork-drive-storage-local"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-drive-storage-contract.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
