[package]
name = "sdkwork-drive-storage-s3"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
aws-config = "1.8"
aws-credential-types = "1.2"
aws-sdk-s3 = "1.79"
aws-types = "1.3"
sdkwork-drive-storage-contract = { path = "../sdkwork-drive-storage-contract" }
tokio.workspace = true
