[package]
name = "sdkwork-drive-storage-s3"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
aws-types.workspace = true
sdkwork-drive-storage-contract.workspace = true
tokio.workspace = true
