[package]
name = "sdkwork-router-drive-app-api"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
http.workspace = true
serde_json.workspace = true
sdkwork-drive-observability.workspace = true
sdkwork-drive-config.workspace = true
sdkwork-drive-security.workspace = true
sdkwork-drive-workspace-service.workspace = true
sdkwork-drive-storage-contract.workspace = true
sdkwork-drive-storage-s3.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
