[package]
name = "sdkwork-routes-drive-backend-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-drive-config.workspace = true
sdkwork-drive-contract.workspace = true
sdkwork-drive-http.workspace = true
sdkwork-drive-observability = { workspace = true, features = ["otlp"] }
sdkwork-drive-security.workspace = true
sdkwork-drive-workspace-service.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
sdkwork-iam-web-adapter.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
