[package]
name = "sdkwork-routes-drive-internal-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono = "0.4"
futures-util.workspace = true
http.workspace = true
httpdate.workspace = true
sdkwork-drive-http.workspace = true
sdkwork-drive-object-runtime.workspace = true
sdkwork-drive-storage-contract.workspace = true
sdkwork-drive-workspace-service.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
sdkwork-drive-config.workspace = true
sdkwork-drive-storage-local.workspace = true
serde_json.workspace = true
tempfile.workspace = true
url.workspace = true
