[package]
name = "sdkwork-drive-admin-storage-api"
version.workspace = true
edition.workspace = true

[features]
default = []
opendal-s3-plugin = ["dep:sdkwork-drive-storage-opendal"]

[dependencies]
axum = "0.7"
http = "1.4"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sdkwork-drive-config.workspace = true
sdkwork-drive-product.workspace = true
sdkwork-drive-security.workspace = true
sdkwork-drive-storage-contract.workspace = true
sdkwork-drive-storage-opendal = { workspace = true, optional = true }
sdkwork-drive-storage-s3.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite", "postgres"] }
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
axum = "0.7"
